RA-Timeout for IPv6 is broken in general and brakes an IPv6-Setup based on IPv6-PD
I use IPv6-PD to setup a bridge-port with an official IPv6-Prefix provided by my FritzBox-router. This worked fine until my distro (Gentoo Linux) upgraded to NetworkManager 1.36.4 (1.38.0 is broken as well). When the bridge-interface comes up (configured with "ipv6.method=shared") it receives the IPv6-PD prefix as supposed. After a minute the bridge goes down without any further interaction and the IP-config is destroyed (IPv4 and IPv6). Reason is as of debug log the RA-Timeout. Trying to set "ipv6.ra-timeout=2147483647" makes no change. Setting any other value between 0 and MAXINT32 makes no difference at all. I do not see any "scheduling RA timeout" messages in the debug log.
Sysctl for the bridge shows "net.ipv6.conf.br0.accept_ra = 0" which seems to be ignored by NM at all. Sysctl default shows "net.ipv6.conf.default.accept_ra = 0" which seems to be ignored by NM at all.
There is no need to request RA at all since the port is configured by IPv6-PD and statically.
Please find below the NM IPv6 configuration of the bridge-port.
[ipv6]
addr-gen-mode=eui64
address1=fd67:e652:24a0:73::1/64
dhcp-duid=stable-ll
ignore-auto-dns=true
ignore-auto-routes=true
may-fail=false
method=shared
never-default=true
ra-timeout=2147483647
required-timeout=0
A good result looks like
bully ~ # ip a s br0
11: br0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default qlen 1000
link/ether de:f7:81:a6:ff:57 brd ff:ff:ff:ff:ff:ff
inet 192.168.73.1/24 brd 192.168.73.255 scope global noprefixroute br0
valid_lft forever preferred_lft forever
inet6 fd67:e652:24a0:73::1/64 scope global noprefixroute
valid_lft forever preferred_lft forever
inet6 2003:c9:573c:1bf9::1/64 scope global dynamic noprefixroute
valid_lft 6765sec preferred_lft 3165sec
inet6 fe80::dcf7:81ff:fea6:ff57/64 scope link noprefixroute
valid_lft forever preferred_lft forever
The inet6 2003:c9:573c:1bf9::1/64 scope global dynamic noprefixroute is the IPv6 address provided by IPv6-PD. Exactly after 60 seconds this IP-config is destroyed by the not working RA-Timeout
Many thanks in advance for taking care of this issue.
Kind regards Stefan